// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teleinfo component should render correctly with notif data 1`] = `
<div
  className="teleinfo"
>
  <section
    className="teleinfo__quick-status"
  >
    <div
      data={
        {
          "apparentPower": 250,
          "chosenFareOption": "BASE",
          "estimatedPower": 225,
          "estimatedPrices": {
            "currentDay": 5.567,
            "currentMonth": 55,
            "total": 500,
          },
          "instantIntensity": 1,
          "meta": {
            "firstDataTimestamp": 1674565891995,
            "lastUpdateTimestamp": 1674818126026,
            "unresolvedGroups": {},
          },
          "statistics": {
            "instantIntensity": {},
            "instantPower": {},
          },
          "suppliedPower": {
            "currentDay": [
              1,
              2,
            ],
            "currentMonth": [
              10,
              20,
            ],
            "total": [
              100,
              200,
            ],
          },
        }
      }
      hearbeatTs={1674818126028}
    >
      QuickStatus component
    </div>
  </section>
  <section
    className="teleinfo__instant-section"
  >
    <p
      className="teleinfo__power"
    >
      <span
        className="teleinfo__power-value"
      >
        250
      </span>
      <span
        className="teleinfo__power-unit"
      >
        VA
      </span>
      <span
        className="teleinfo__power-value"
      >
        ~
        225
      </span>
      <span
        className="teleinfo__power-unit"
      >
        W
      </span>
    </p>
    <p
      className="teleinfo__power-stats"
    >
      <p
        className="teleinfo__power-stats-group"
      >
        <span
          className="teleinfo__power-stats-label"
        >
          Min (today/month/overall):
        </span>
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        <span
          className="teleinfo__power-stats-unit"
        >
          VA
        </span>
      </p>
      <p
        className="teleinfo__power-stats-group"
      >
        <span
          className="teleinfo__power-stats-label"
        >
          Max:
        </span>
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        <span
          className="teleinfo__power-stats-unit"
        >
          VA
        </span>
      </p>
    </p>
    <p
      className="teleinfo__intensity"
    >
      <span
        className="teleinfo__intensity-label"
      >
        Intensity:
      </span>
      <span
        className="teleinfo__intensity-value"
      >
        1
      </span>
      <span
        className="teleinfo__intensity-unit"
      >
        A
      </span>
    </p>
    <p
      className="teleinfo__supplied"
    >
      <span
        className="teleinfo__supplied-label"
      >
        Supplied (today/month/total):
      </span>
      <span
        className="teleinfo__supplied-value"
      >
        3
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        30
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        300
      </span>
      <span
        className="teleinfo__supplied-unit"
      >
        Wh
      </span>
    </p>
    <p
      className="teleinfo__supplied-detail"
    >
      <ul
        className="teleinfo__supplied-detail-items"
      >
        <li
          className="teleinfo__supplied-detail-item"
        >
          <span
            className="teleinfo__supplied-label"
          >
            base
            :
          </span>
          <span
            className="teleinfo__supplied-value"
          >
            1
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            10
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            100
          </span>
          <span
            className="teleinfo__supplied-unit"
          >
            Wh
          </span>
        </li>
        <li
          className="teleinfo__supplied-detail-item"
        >
          <span
            className="teleinfo__supplied-label"
          >
            :
          </span>
          <span
            className="teleinfo__supplied-value"
          >
            2
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            20
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            200
          </span>
          <span
            className="teleinfo__supplied-unit"
          >
            Wh
          </span>
        </li>
      </ul>
    </p>
  </section>
  <section
    className="teleinfo__costs-section"
  >
    <p
      className="teleinfo__costs"
    >
      <span
        className="teleinfo__costs-label"
      >
        Costs (today/month/total):
      </span>
      <span
        className="teleinfo__costs-value"
      >
        ~
        5.57
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        55
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        500
      </span>
      <span
        className="teleinfo__costs-unit"
      >
        €
      </span>
    </p>
    <p
      className="teleinfo__costs-detail"
    >
      <ul
        className="teleinfo__costs-detail-items"
      />
    </p>
  </section>
  <section
    className="teleinfo__dates-section"
  >
    <p
      className="teleinfo__dates-start-last"
    >
      <span
        className="teleinfo__dates-start-last-label"
      >
        First-last data:
      </span>
      <span
        className="teleinfo__dates-start-last-value"
      >
        HH:mm:ss(1674565891995), on yyyy/MM/dd(1674565891995)
         - 
        HH:mm:ss(1674818126026), on yyyy/MM/dd(1674818126026)
      </span>
    </p>
  </section>
</div>
`;

exports[`Teleinfo component should render correctly with notif data and power overuse 1`] = `
<div
  className="teleinfo"
>
  <section
    className="teleinfo__quick-status"
  >
    <div
      data={
        {
          "apparentPower": 250,
          "chosenFareOption": "BASE",
          "estimatedPower": 225,
          "estimatedPrices": {
            "currentDay": 5.567,
            "currentMonth": 55,
            "total": 500,
          },
          "instantIntensity": 1,
          "meta": {
            "firstDataTimestamp": 1674565891995,
            "lastUpdateTimestamp": 1674818126026,
            "unresolvedGroups": {},
          },
          "statistics": {
            "instantIntensity": {},
            "instantPower": {},
          },
          "subscribedPowerOverflowWarning": 1,
          "suppliedPower": {
            "currentDay": [
              1,
              2,
            ],
            "currentMonth": [
              10,
              20,
            ],
            "total": [
              100,
              200,
            ],
          },
        }
      }
      hearbeatTs={1674818126028}
    >
      QuickStatus component
    </div>
  </section>
  <section
    className="teleinfo__instant-section"
  >
    <p
      className="teleinfo__power"
    >
      <span
        className="teleinfo__power-value"
      >
        250
      </span>
      <span
        className="teleinfo__power-unit"
      >
        VA
      </span>
      <span
        className="teleinfo__power-value"
      >
        ~
        225
      </span>
      <span
        className="teleinfo__power-unit"
      >
        W
      </span>
    </p>
    <p
      className="teleinfo__power-stats"
    >
      <p
        className="teleinfo__power-stats-group"
      >
        <span
          className="teleinfo__power-stats-label"
        >
          Min (today/month/overall):
        </span>
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        <span
          className="teleinfo__power-stats-unit"
        >
          VA
        </span>
      </p>
      <p
        className="teleinfo__power-stats-group"
      >
        <span
          className="teleinfo__power-stats-label"
        >
          Max:
        </span>
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        <span
          className="teleinfo__power-stats-unit"
        >
          VA
        </span>
      </p>
    </p>
    <p
      className="teleinfo__intensity with-overflow"
    >
      <span
        className="teleinfo__intensity-label"
      >
        Intensity:
      </span>
      <span
        className="teleinfo__intensity-value"
      >
        1
      </span>
      <span
        className="teleinfo__intensity-unit"
      >
        A
      </span>
    </p>
    <p
      className="teleinfo__over-intensity"
    >
      <span
        className="teleinfo__over-intensity-label"
      >
        Overuse:
      </span>
      <span
        className="teleinfo__over-intensity-value"
      >
        1
      </span>
      <span
        className="teleinfo__over-intensity-unit"
      >
        A
      </span>
    </p>
    <p
      className="teleinfo__supplied"
    >
      <span
        className="teleinfo__supplied-label"
      >
        Supplied (today/month/total):
      </span>
      <span
        className="teleinfo__supplied-value"
      >
        3
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        30
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        300
      </span>
      <span
        className="teleinfo__supplied-unit"
      >
        Wh
      </span>
    </p>
    <p
      className="teleinfo__supplied-detail"
    >
      <ul
        className="teleinfo__supplied-detail-items"
      >
        <li
          className="teleinfo__supplied-detail-item"
        >
          <span
            className="teleinfo__supplied-label"
          >
            base
            :
          </span>
          <span
            className="teleinfo__supplied-value"
          >
            1
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            10
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            100
          </span>
          <span
            className="teleinfo__supplied-unit"
          >
            Wh
          </span>
        </li>
        <li
          className="teleinfo__supplied-detail-item"
        >
          <span
            className="teleinfo__supplied-label"
          >
            :
          </span>
          <span
            className="teleinfo__supplied-value"
          >
            2
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            20
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            200
          </span>
          <span
            className="teleinfo__supplied-unit"
          >
            Wh
          </span>
        </li>
      </ul>
    </p>
  </section>
  <section
    className="teleinfo__costs-section"
  >
    <p
      className="teleinfo__costs"
    >
      <span
        className="teleinfo__costs-label"
      >
        Costs (today/month/total):
      </span>
      <span
        className="teleinfo__costs-value"
      >
        ~
        5.57
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        55
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        500
      </span>
      <span
        className="teleinfo__costs-unit"
      >
        €
      </span>
    </p>
    <p
      className="teleinfo__costs-detail"
    >
      <ul
        className="teleinfo__costs-detail-items"
      />
    </p>
  </section>
  <section
    className="teleinfo__dates-section"
  >
    <p
      className="teleinfo__dates-start-last"
    >
      <span
        className="teleinfo__dates-start-last-label"
      >
        First-last data:
      </span>
      <span
        className="teleinfo__dates-start-last-value"
      >
        HH:mm:ss(1674565891995), on yyyy/MM/dd(1674565891995)
         - 
        HH:mm:ss(1674818126026), on yyyy/MM/dd(1674818126026)
      </span>
    </p>
  </section>
</div>
`;

exports[`Teleinfo component should render correctly with notif data and power stats 1`] = `
<div
  className="teleinfo"
>
  <section
    className="teleinfo__quick-status"
  >
    <div
      data={
        {
          "apparentPower": 250,
          "chosenFareOption": "BASE",
          "estimatedPower": 225,
          "estimatedPrices": {
            "currentDay": 5.567,
            "currentMonth": 55,
            "total": 500,
          },
          "instantIntensity": 1,
          "meta": {
            "firstDataTimestamp": 1674565891995,
            "lastUpdateTimestamp": 1674818126026,
            "unresolvedGroups": {},
          },
          "statistics": {
            "instantPower": {
              "currentDay": {
                "max": 155,
                "min": 1,
              },
              "currentMonth": {
                "max": 200,
                "min": 1.5,
              },
              "overall": {
                "max": 500,
                "min": 1.55,
              },
            },
          },
          "subscribedPowerOverflowWarning": 1,
          "suppliedPower": {
            "currentDay": [
              1,
              2,
            ],
            "currentMonth": [
              10,
              20,
            ],
            "total": [
              100,
              200,
            ],
          },
        }
      }
      hearbeatTs={1674818126028}
    >
      QuickStatus component
    </div>
  </section>
  <section
    className="teleinfo__instant-section"
  >
    <p
      className="teleinfo__power"
    >
      <span
        className="teleinfo__power-value"
      >
        250
      </span>
      <span
        className="teleinfo__power-unit"
      >
        VA
      </span>
      <span
        className="teleinfo__power-value"
      >
        ~
        225
      </span>
      <span
        className="teleinfo__power-unit"
      >
        W
      </span>
    </p>
    <p
      className="teleinfo__power-stats"
    >
      <p
        className="teleinfo__power-stats-group"
      >
        <span
          className="teleinfo__power-stats-label"
        >
          Min (today/month/overall):
        </span>
        <span
          className="teleinfo__power-stats-value"
        >
          1
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          1.5
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          1.55
        </span>
        <span
          className="teleinfo__power-stats-unit"
        >
          VA
        </span>
      </p>
      <p
        className="teleinfo__power-stats-group"
      >
        <span
          className="teleinfo__power-stats-label"
        >
          Max:
        </span>
        <span
          className="teleinfo__power-stats-value"
        >
          155
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          200
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          500
        </span>
        <span
          className="teleinfo__power-stats-unit"
        >
          VA
        </span>
      </p>
    </p>
    <p
      className="teleinfo__intensity with-overflow"
    >
      <span
        className="teleinfo__intensity-label"
      >
        Intensity:
      </span>
      <span
        className="teleinfo__intensity-value"
      >
        1
      </span>
      <span
        className="teleinfo__intensity-unit"
      >
        A
      </span>
    </p>
    <p
      className="teleinfo__over-intensity"
    >
      <span
        className="teleinfo__over-intensity-label"
      >
        Overuse:
      </span>
      <span
        className="teleinfo__over-intensity-value"
      >
        1
      </span>
      <span
        className="teleinfo__over-intensity-unit"
      >
        A
      </span>
    </p>
    <p
      className="teleinfo__supplied"
    >
      <span
        className="teleinfo__supplied-label"
      >
        Supplied (today/month/total):
      </span>
      <span
        className="teleinfo__supplied-value"
      >
        3
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        30
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        300
      </span>
      <span
        className="teleinfo__supplied-unit"
      >
        Wh
      </span>
    </p>
    <p
      className="teleinfo__supplied-detail"
    >
      <ul
        className="teleinfo__supplied-detail-items"
      >
        <li
          className="teleinfo__supplied-detail-item"
        >
          <span
            className="teleinfo__supplied-label"
          >
            base
            :
          </span>
          <span
            className="teleinfo__supplied-value"
          >
            1
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            10
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            100
          </span>
          <span
            className="teleinfo__supplied-unit"
          >
            Wh
          </span>
        </li>
        <li
          className="teleinfo__supplied-detail-item"
        >
          <span
            className="teleinfo__supplied-label"
          >
            :
          </span>
          <span
            className="teleinfo__supplied-value"
          >
            2
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            20
          </span>
          /
          <span
            className="teleinfo__supplied-value"
          >
            200
          </span>
          <span
            className="teleinfo__supplied-unit"
          >
            Wh
          </span>
        </li>
      </ul>
    </p>
  </section>
  <section
    className="teleinfo__costs-section"
  >
    <p
      className="teleinfo__costs"
    >
      <span
        className="teleinfo__costs-label"
      >
        Costs (today/month/total):
      </span>
      <span
        className="teleinfo__costs-value"
      >
        ~
        5.57
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        55
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        500
      </span>
      <span
        className="teleinfo__costs-unit"
      >
        €
      </span>
    </p>
    <p
      className="teleinfo__costs-detail"
    >
      <ul
        className="teleinfo__costs-detail-items"
      />
    </p>
  </section>
  <section
    className="teleinfo__dates-section"
  >
    <p
      className="teleinfo__dates-start-last"
    >
      <span
        className="teleinfo__dates-start-last-label"
      >
        First-last data:
      </span>
      <span
        className="teleinfo__dates-start-last-value"
      >
        HH:mm:ss(1674565891995), on yyyy/MM/dd(1674565891995)
         - 
        HH:mm:ss(1674818126026), on yyyy/MM/dd(1674818126026)
      </span>
    </p>
  </section>
</div>
`;

exports[`Teleinfo component should render correctly with notif data but without supplied power information 1`] = `
<div
  className="teleinfo"
>
  <section
    className="teleinfo__quick-status"
  >
    <div
      data={
        {
          "apparentPower": 250,
          "chosenFareOption": "BASE",
          "estimatedPower": 225,
          "estimatedPrices": {
            "currentDay": 5.567,
            "currentMonth": 55,
            "total": 500,
          },
          "instantIntensity": 1,
          "meta": {
            "firstDataTimestamp": 1674565891995,
            "lastUpdateTimestamp": 1674818126026,
            "unresolvedGroups": {},
          },
          "statistics": {
            "instantIntensity": {},
            "instantPower": {},
          },
          "suppliedPower": {},
        }
      }
      hearbeatTs={1674818126028}
    >
      QuickStatus component
    </div>
  </section>
  <section
    className="teleinfo__instant-section"
  >
    <p
      className="teleinfo__power"
    >
      <span
        className="teleinfo__power-value"
      >
        250
      </span>
      <span
        className="teleinfo__power-unit"
      >
        VA
      </span>
      <span
        className="teleinfo__power-value"
      >
        ~
        225
      </span>
      <span
        className="teleinfo__power-unit"
      >
        W
      </span>
    </p>
    <p
      className="teleinfo__power-stats"
    >
      <p
        className="teleinfo__power-stats-group"
      >
        <span
          className="teleinfo__power-stats-label"
        >
          Min (today/month/overall):
        </span>
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        <span
          className="teleinfo__power-stats-unit"
        >
          VA
        </span>
      </p>
      <p
        className="teleinfo__power-stats-group"
      >
        <span
          className="teleinfo__power-stats-label"
        >
          Max:
        </span>
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        /
        <span
          className="teleinfo__power-stats-value"
        >
          ...
        </span>
        <span
          className="teleinfo__power-stats-unit"
        >
          VA
        </span>
      </p>
    </p>
    <p
      className="teleinfo__intensity"
    >
      <span
        className="teleinfo__intensity-label"
      >
        Intensity:
      </span>
      <span
        className="teleinfo__intensity-value"
      >
        1
      </span>
      <span
        className="teleinfo__intensity-unit"
      >
        A
      </span>
    </p>
    <p
      className="teleinfo__supplied"
    >
      <span
        className="teleinfo__supplied-label"
      >
        Supplied (today/month/total):
      </span>
      <span
        className="teleinfo__supplied-value"
      >
        ...
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        ...
      </span>
      /
      <span
        className="teleinfo__supplied-value"
      >
        ...
      </span>
      <span
        className="teleinfo__supplied-unit"
      >
        Wh
      </span>
    </p>
    <p
      className="teleinfo__supplied-detail"
    >
      <ul
        className="teleinfo__supplied-detail-items"
      />
    </p>
  </section>
  <section
    className="teleinfo__costs-section"
  >
    <p
      className="teleinfo__costs"
    >
      <span
        className="teleinfo__costs-label"
      >
        Costs (today/month/total):
      </span>
      <span
        className="teleinfo__costs-value"
      >
        ~
        5.57
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        55
      </span>
      /
      <span
        className="teleinfo__costs-value"
      >
        500
      </span>
      <span
        className="teleinfo__costs-unit"
      >
        €
      </span>
    </p>
    <p
      className="teleinfo__costs-detail"
    >
      <ul
        className="teleinfo__costs-detail-items"
      />
    </p>
  </section>
  <section
    className="teleinfo__dates-section"
  >
    <p
      className="teleinfo__dates-start-last"
    >
      <span
        className="teleinfo__dates-start-last-label"
      >
        First-last data:
      </span>
      <span
        className="teleinfo__dates-start-last-value"
      >
        HH:mm:ss(1674565891995), on yyyy/MM/dd(1674565891995)
         - 
        HH:mm:ss(1674818126026), on yyyy/MM/dd(1674818126026)
      </span>
    </p>
  </section>
</div>
`;

exports[`Teleinfo component should render correctly without notif data 1`] = `
<div
  className="teleinfo"
>
  <section
    className="teleinfo__quick-status"
  >
    <div>
      QuickStatus component
    </div>
  </section>
  <p
    className="teleinfo__no-data"
  >
    No data received yet.
  </p>
</div>
`;
